<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/nombre_producto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"

            android:text="@string/adidas_gazelle_bold_w"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/descripcion_adidas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripcion_adidas"
            android:textSize="20sp"
            android:layout_below="@+id/nombre_producto"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/precio_adidas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nombre_producto"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="34dp"
            android:text="@string/precio_adidas"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/marca_adidas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nombre_producto"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="63dp"
            android:text="Adidas"
            android:textSize="20sp" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>